--- a/example-notebooks/display-updates.ipynb
+++ b/example-notebooks/display-updates.ipynb
@@ -24,7 +24,7 @@
     "collapsed": false
    },
    "outputs": [],
-   "status": "",
+   "status": "idle",
    "metadata,outputExpanded": false,
    "cell_type": "code",
    "source": [
@@ -52,12 +52,12 @@
   {
    "execution_count": 2,
    "metadata,outputHidden": false,
-   "metadata,outputExpanded": false,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "status": "",
+   "status": "idle",
+   "metadata,outputExpanded": false,
    "cell_type": "code",
    "source": [
     "# a temporary patch of display for demonstration purposes\n",
@@ -77,8 +77,8 @@
   },
   {
    "metadata,outputHidden": false,
-   "metadata": {},
    "metadata,outputExpanded": false,
+   "metadata": {},
    "outputs": [],
    "status": "",
    "cell_type": "markdown",
@@ -90,20 +90,20 @@
   {
    "execution_count": 3,
    "metadata,outputHidden": false,
+   "metadata,outputExpanded": false,
    "metadata": {
     "collapsed": false
    },
-   "metadata,outputExpanded": false,
    "outputs": [],
-   "status": "",
+   "status": "idle",
    "cell_type": "code",
    "source": [
     "display('initial display', 'some_destination')"
    ]
   },
   {
-   "metadata,outputExpanded": false,
    "metadata,outputHidden": false,
+   "metadata,outputExpanded": false,
    "metadata": {},
    "outputs": [],
    "status": "",
@@ -114,14 +114,14 @@
    ]
   },
   {
+   "metadata,outputExpanded": false,
    "execution_count": 4,
    "metadata,outputHidden": false,
-   "metadata,outputExpanded": false,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "status": "",
+   "status": "idle",
    "cell_type": "code",
    "source": [
     "display('spoiler alert: output updated in both', 'some_destination')\t\t\t"
@@ -146,32 +146,32 @@
     "collapsed": false
    },
    "outputs": [],
-   "status": "",
+   "status": "idle",
    "cell_type": "code",
    "source": [
     "display('no output here, update above', 'some_destination', update=True)\t\t\t"
    ]
   },
   {
+   "metadata,outputExpanded": false,
    "metadata,outputHidden": false,
    "metadata": {},
    "outputs": [],
    "status": "",
-   "metadata,outputExpanded": false,
    "cell_type": "markdown",
    "source": [
     "Though we have been working with text so far, this also works for the all other output types. Let's make an HTML-based progress bar!"
    ]
   },
   {
-   "execution_count": 6,
    "metadata,outputHidden": false,
    "metadata,outputExpanded": false,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "status": "",
+   "status": "idle",
    "cell_type": "code",
    "source": [
     "import os\n",
@@ -179,9 +179,10 @@
     "\n",
     "class ProgressBar(object):\n",
     "    def __init__(self, capacity):\n",
-    "        self.progress = 0\n",
-    "        self.capacity = capacity\n",
     "        self._display_id = hexlify(os.urandom(8)).decode('ascii')\n",
+    "        self.capacity = capacity\n",
+    "        self.progress = 0\n",
+    "        \n",
     "        \n",
     "    def _repr_html_(self):\n",
     "        return \"<progress style='width:100%' max='{}' value='{}'></progress>\".format(self.capacity, self.progress)\n",
@@ -197,25 +198,25 @@
    ]
   },
   {
-   "metadata,outputExpanded": false,
    "metadata,outputHidden": false,
    "metadata": {},
    "outputs": [],
    "status": "",
+   "metadata,outputExpanded": false,
    "cell_type": "markdown",
    "source": [
     "The progress bar is drawn and it starts off at `0`. Fill it up half way and call its `update` method to get a redraw. "
    ]
   },
   {
-   "execution_count": 7,
    "metadata,outputHidden": false,
    "metadata,outputExpanded": false,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "status": "",
+   "status": "idle",
    "cell_type": "code",
    "source": [
     "bar.progress = 50\n",
@@ -223,8 +224,8 @@
    ]
   },
   {
-   "metadata,outputHidden": false,
    "metadata,outputExpanded": false,
+   "metadata,outputHidden": false,
    "metadata": {},
    "outputs": [],
    "status": "",
@@ -234,14 +235,14 @@
    ]
   },
   {
-   "metadata,outputExpanded": false,
    "execution_count": 8,
    "metadata,outputHidden": false,
+   "metadata,outputExpanded": false,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "status": "",
+   "status": "idle",
    "cell_type": "code",
    "source": [
     "bar.progress = 75\n",
@@ -260,53 +261,104 @@
    ]
   },
   {
+   "execution_count": 9,
    "metadata,outputHidden": false,
    "metadata,outputExpanded": false,
-   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "status": "",
+   "status": "idle",
    "cell_type": "code",
    "source": [
     "bar.display()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is good, but it would be awesome to have a progress bar that would automatically update whenever its progress was modified - that would be truly *progress*ive. We subclass `ProgressBar` and now we make `progress` into a [Python property](https://docs.python.org/3/library/functions.html#property), which will allow us to set it and get it like an attribute, but do that using methods. In particular, whenever we assign a new value to `progress`, we also call `update`."
+   ],
+   "outputs": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "class AutoupdatingProgressBar(ProgressBar):\n",
+    "    @property\n",
+    "    def progress(self):\n",
+    "        return self._progress\n",
+    "    \n",
+    "    @progress.setter\n",
+    "    def progress(self, value):\n",
+    "        self._progress = value\n",
+    "        self.update()"
+   ],
+   "outputs": [],
+   "status": "idle"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "better_bar = AutoupdatingProgressBar(100)\n",
+    "better_bar.display()"
+   ],
+   "outputs": [],
+   "status": "idle"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "better_bar.progress = 40"
+   ],
+   "outputs": [],
+   "status": "idle"
+  },
+  {
    "metadata,outputHidden": false,
    "metadata": {},
+   "metadata,outputExpanded": false,
    "outputs": [],
    "status": "",
-   "metadata,outputExpanded": false,
    "cell_type": "markdown",
    "source": [
-    "Much better. Let's make a little animation that [Zeno](https://en.wikipedia.org/wiki/Zeno%27s_paradoxes#Dichotomy_paradox) would be proud of:"
+    "Much better. No more pesky `update` calls. Let's make a little animation that [Zeno](https://en.wikipedia.org/wiki/Zeno%27s_paradoxes#Dichotomy_paradox) would be proud of:"
    ]
   },
   {
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata,outputHidden": false,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "status": "",
    "metadata,outputExpanded": false,
+   "outputs": [],
+   "status": "idle",
    "cell_type": "code",
    "source": [
     "import time\n",
-    "bar.progress = 0\n",
-    "bar.update()\n",
-    "for _ in range(5):\n",
-    "    time.sleep(1)\n",
-    "    bar.progress += (bar.capacity - bar.progress) / 2.\n",
-    "    bar.update()"
+    "better_bar.progress = 0\n",
+    "for _ in range(10):\n",
+    "    time.sleep(.5)\n",
+    "    better_bar.progress += (better_bar.capacity - better_bar.progress) / 2"
    ]
   },
   {
-   "metadata,outputExpanded": false,
    "metadata,outputHidden": false,
+   "metadata,outputExpanded": false,
    "metadata": {},
    "outputs": [],
    "status": "",
@@ -317,51 +369,49 @@
    ]
   },
   {
+   "execution_count": 14,
    "metadata,outputHidden": false,
-   "metadata,outputExpanded": false,
-   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "status": "",
+   "status": "idle",
+   "metadata,outputExpanded": false,
    "cell_type": "code",
    "source": [
     "num_bars = 5\n",
-    "bars = [ProgressBar(100) for _ in range(num_bars)]\n",
-    "\n",
+    "bars = [AutoupdatingProgressBar(100) for _ in range(num_bars)]\n",
     "for b in bars:\n",
     "    b.display()"
    ]
   },
   {
-   "execution_count": 12,
    "metadata,outputHidden": false,
+   "metadata,outputExpanded": false,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "status": "",
-   "metadata,outputExpanded": false,
+   "status": "idle",
    "cell_type": "code",
    "source": [
     "import random \n",
-    "for x in range(20):\n",
+    "for x in range(40):\n",
     "    time.sleep(.1)\n",
     "    idx = random.randrange(num_bars)\n",
-    "    bars[idx].progress +=  random.randint(-2, 10)\n",
-    "    bars[idx].update()"
+    "    bars[idx].progress +=  random.randint(-2, 10)"
    ]
   },
   {
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata,outputHidden": false,
-   "metadata,outputExpanded": false,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "status": "",
+   "status": "idle",
+   "metadata,outputExpanded": false,
    "cell_type": "code",
    "source": [
     "for b in bars:\n",
@@ -381,16 +431,16 @@
    "name": "python3"
   },
   "language_info": {
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.2",
    "codemirror_mode": {
-    "version": 3,
-    "name": "ipython"
+    "name": "ipython",
+    "version": 3
    },
+   "nbconvert_exporter": "python",
    "mimetype": "text/x-python",
-   "file_extension": ".py"
+   "version": "3.5.2",
+   "file_extension": ".py",
+   "name": "python",
+   "pygments_lexer": "ipython3"
   }
  }
 }
