more models stuff

--- a/example-notebooks/model-debug.ipynb
+++ b/example-notebooks/model-debug.ipynb
@@ -27,10 +27,58 @@
     {
       "cell_type": "code",
       "source": [
-        "IPython.display.display({\n",
+        "# a temporary patch of display for demonstration purposes\n",
+        "ip = get_ipython()\n",
+        "\n",
+        "def display_with_id(content, display_id=None, update=False):\n",
+        "    iopub = ip.kernel.iopub_socket\n",
+        "    session = ip.kernel.session\n",
+        "    msg_type = 'display_data'\n",
+        "    session.send(iopub, msg_type, content, parent=ip.parent_header)\n",
+        "\ndisplay = display_with_id"
+      ],
+      "outputs": [],
+      "execution_count": 4,
+      "metadata": {
+        "collapsed": false,
+        "outputHidden": false,
+        "inputHidden": false
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "c = ipykernel.comm.Comm(target_name='setIn', target_module='reducers')\n",
+        "c.comm_id"
+      ],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "execution_count": 6,
+          "data": {
+            "text/plain": [
+              "'cfd3fc22bb54449fb7fcaa04a3a157c8'"
+            ]
+          },
+          "metadata": {}
+        }
+      ],
+      "execution_count": 6,
+      "metadata": {
+        "collapsed": false,
+        "outputExpanded": false
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "display({\n",
+        "  'data': {\n",
         "    'application/x-nteract-model-debug+json': 'asdfasf'\n",
-        "},\n",
-        "raw=True)"
+        "  },\n",
+        "  'metadata': {},\n",
+        "  'transient': { 'model_id': c.comm_id }\n",
+        "})"
       ],
       "outputs": [
         {
@@ -41,19 +89,7 @@
           "metadata": {}
         }
       ],
-      "execution_count": 3,
-      "metadata": {
-        "collapsed": false,
-        "outputExpanded": false
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "c = ipykernel.comm.Comm(target_name='setIn', target_module='reducers')"
-      ],
-      "outputs": [],
-      "execution_count": 4,
+      "execution_count": 8,
       "metadata": {
         "collapsed": false,
         "outputExpanded": false
@@ -65,12 +101,12 @@
         "import time\n",
         "import random\n",
         "\n",
-        "for ii in range(25) :\n",
+        "for ii in range(5) :\n",
         "  time.sleep(0.1)\n",
         "  c.send({'path': ['text'], 'value': random.random()})"
       ],
       "outputs": [],
-      "execution_count": 5,
+      "execution_count": 10,
       "metadata": {
         "collapsed": false,
         "outputExpanded": false
