--- a/example-notebooks/geojson.ipynb
+++ b/example-notebooks/geojson.ipynb
@@ -18,7 +18,7 @@
         "    display(bundle, metadata=metadata, raw=True)"
       ],
       "outputs": [],
-      "execution_count": 6,
+      "execution_count": 9,
       "metadata": {
         "collapsed": false
       }
@@ -26,169 +26,10 @@
     {
       "cell_type": "code",
       "source": [
-        "data = {\n",
-        "\t\"type\": \"FeatureCollection\",\n",
-        "\t\"features\": [{\n",
-        "\t\t\"type\": \"Feature\",\n",
-        "\t\t\"properties\": {\n",
-        "\t\t\t\"place\": \"The coffee bar\",\n",
-        "\t\t\t\"login\": \"espresso\",\n",
-        "\t\t\t\"lat\": \"38.91427\",\n",
-        "\t\t\t\"lon\": \"-77.02827\"\n",
-        "\t\t},\n",
-        "\t\t\"geometry\": {\n",
-        "\t\t\t\"type\": \"Point\",\n",
-        "\t\t\t\"coordinates\": [-77.02827, 38.91427]\n",
-        "\t\t}\n",
-        "\t}, {\n",
-        "\t\t\"type\": \"Feature\",\n",
-        "\t\t\"properties\": {\n",
-        "\t\t\t\"place\": \"Bistro Bohem\",\n",
-        "\t\t\t\"login\": \"2027355895\",\n",
-        "\t\t\t\"lat\": \"38.91538\",\n",
-        "\t\t\t\"lon\": \"-77.02013\"\n",
-        "\t\t},\n",
-        "\t\t\"geometry\": {\n",
-        "\t\t\t\"type\": \"Point\",\n",
-        "\t\t\t\"coordinates\": [-77.02013, 38.91538]\n",
-        "\t\t}\n",
-        "\t}, {\n",
-        "\t\t\"type\": \"Feature\",\n",
-        "\t\t\"properties\": {\n",
-        "\t\t\t\"place\": \"Black Cat\",\n",
-        "\t\t\t\"login\": \"luckycat\",\n",
-        "\t\t\t\"lat\": \"38.91458\",\n",
-        "\t\t\t\"lon\": \"-77.03155\"\n",
-        "\t\t},\n",
-        "\t\t\"geometry\": {\n",
-        "\t\t\t\"type\": \"Point\",\n",
-        "\t\t\t\"coordinates\": [-77.03155, 38.91458]\n",
-        "\t\t}\n",
-        "\t}, {\n",
-        "\t\t\"type\": \"Feature\",\n",
-        "\t\t\"properties\": {\n",
-        "\t\t\t\"place\": \"Snap\",\n",
-        "\t\t\t\"login\": \"nutella1\",\n",
-        "\t\t\t\"lat\": \"38.92239\",\n",
-        "\t\t\t\"lon\": \"-77.04227\"\n",
-        "\t\t},\n",
-        "\t\t\"geometry\": {\n",
-        "\t\t\t\"type\": \"Point\",\n",
-        "\t\t\t\"coordinates\": [-77.04227, 38.92239]\n",
-        "\t\t}\n",
-        "\t}, {\n",
-        "\t\t\"type\": \"Feature\",\n",
-        "\t\t\"properties\": {\n",
-        "\t\t\t\"place\": \"Columbia Heights Coffee\",\n",
-        "\t\t\t\"login\": \"FAIRTRADE1\",\n",
-        "\t\t\t\"lat\": \"38.93222\",\n",
-        "\t\t\t\"lon\": \"-77.02854\"\n",
-        "\t\t},\n",
-        "\t\t\"geometry\": {\n",
-        "\t\t\t\"type\": \"Point\",\n",
-        "\t\t\t\"coordinates\": [-77.02854, 38.93222]\n",
-        "\t\t}\n",
-        "\t}, {\n",
-        "\t\t\"type\": \"Feature\",\n",
-        "\t\t\"properties\": {\n",
-        "\t\t\t\"place\": \"Azi's Cafe\",\n",
-        "\t\t\t\"login\": \"sunny\",\n",
-        "\t\t\t\"lat\": \"38.90842\",\n",
-        "\t\t\t\"lon\": \"-77.02419\"\n",
-        "\t\t},\n",
-        "\t\t\"geometry\": {\n",
-        "\t\t\t\"type\": \"Point\",\n",
-        "\t\t\t\"coordinates\": [-77.02419, 38.90842]\n",
-        "\t\t}\n",
-        "\t}, {\n",
-        "\t\t\"type\": \"Feature\",\n",
-        "\t\t\"properties\": {\n",
-        "\t\t\t\"place\": \"Blind Dog Cafe\",\n",
-        "\t\t\t\"login\": \"baxtercantsee\",\n",
-        "\t\t\t\"lat\": \"38.91931\",\n",
-        "\t\t\t\"lon\": \"-77.02518\"\n",
-        "\t\t},\n",
-        "\t\t\"geometry\": {\n",
-        "\t\t\t\"type\": \"Point\",\n",
-        "\t\t\t\"coordinates\": [-77.02518, 38.91931]\n",
-        "\t\t}\n",
-        "\t}, {\n",
-        "\t\t\"type\": \"Feature\",\n",
-        "\t\t\"properties\": {\n",
-        "\t\t\t\"place\": \"Le Caprice\",\n",
-        "\t\t\t\"login\": \"baguette\",\n",
-        "\t\t\t\"lat\": \"38.93260\",\n",
-        "\t\t\t\"lon\": \"-77.03304\"\n",
-        "\t\t},\n",
-        "\t\t\"geometry\": {\n",
-        "\t\t\t\"type\": \"Point\",\n",
-        "\t\t\t\"coordinates\": [-77.03304, 38.9326]\n",
-        "\t\t}\n",
-        "\t}, {\n",
-        "\t\t\"type\": \"Feature\",\n",
-        "\t\t\"properties\": {\n",
-        "\t\t\t\"place\": \"Filter\",\n",
-        "\t\t\t\"login\": \"\",\n",
-        "\t\t\t\"lat\": \"38.91368\",\n",
-        "\t\t\t\"lon\": \"-77.04509\"\n",
-        "\t\t},\n",
-        "\t\t\"geometry\": {\n",
-        "\t\t\t\"type\": \"Point\",\n",
-        "\t\t\t\"coordinates\": [-77.04509, 38.91368]\n",
-        "\t\t}\n",
-        "\t}, {\n",
-        "\t\t\"type\": \"Feature\",\n",
-        "\t\t\"properties\": {\n",
-        "\t\t\t\"place\": \"Peregrine\",\n",
-        "\t\t\t\"login\": \"espresso\",\n",
-        "\t\t\t\"lat\": \"38.88516\",\n",
-        "\t\t\t\"lon\": \"-76.99656\"\n",
-        "\t\t},\n",
-        "\t\t\"geometry\": {\n",
-        "\t\t\t\"type\": \"Point\",\n",
-        "\t\t\t\"coordinates\": [-76.99656, 38.88516]\n",
-        "\t\t}\n",
-        "\t}, {\n",
-        "\t\t\"type\": \"Feature\",\n",
-        "\t\t\"properties\": {\n",
-        "\t\t\t\"place\": \"Tryst\",\n",
-        "\t\t\t\"login\": \"coupetnt\",\n",
-        "\t\t\t\"lat\": \"38.921894\",\n",
-        "\t\t\t\"lon\": \"-77.042438\"\n",
-        "\t\t},\n",
-        "\t\t\"geometry\": {\n",
-        "\t\t\t\"type\": \"Point\",\n",
-        "\t\t\t\"coordinates\": [-77.042438, 38.921894]\n",
-        "\t\t}\n",
-        "\t}, {\n",
-        "\t\t\"type\": \"Feature\",\n",
-        "\t\t\"properties\": {\n",
-        "\t\t\t\"place\": \"The Coupe\",\n",
-        "\t\t\t\"login\": \"voteforus\",\n",
-        "\t\t\t\"lat\": \"38.93206\",\n",
-        "\t\t\t\"lon\": \"-77.02821\"\n",
-        "\t\t},\n",
-        "\t\t\"geometry\": {\n",
-        "\t\t\t\"type\": \"Point\",\n",
-        "\t\t\t\"coordinates\": [-77.02821, 38.93206]\n",
-        "\t\t}\n",
-        "\t}, {\n",
-        "\t\t\"type\": \"Feature\",\n",
-        "\t\t\"properties\": {\n",
-        "\t\t\t\"place\": \"Big Bear Cafe\",\n",
-        "\t\t\t\"login\": \"\",\n",
-        "\t\t\t\"lat\": \"38.91275\",\n",
-        "\t\t\t\"lon\": \"-77.01239\"\n",
-        "\t\t},\n",
-        "\t\t\"geometry\": {\n",
-        "\t\t\t\"type\": \"Point\",\n",
-        "\t\t\t\"coordinates\": [-77.01239, 38.91275]\n",
-        "\t\t}\n",
-        "\t}]\n",
-        "}"
+        "data = {\"type\":\"FeatureCollection\",\"features\":[{\"type\":\"Feature\",\"properties\":{\"place\":\"The coffee bar\",\"login\":\"espresso\",\"lat\":\"38.91427\",\"lon\":\"-77.02827\"},\"geometry\":{\"type\":\"Point\",\"coordinates\":[-77.02827,38.91427]}},{\"type\":\"Feature\",\"properties\":{\"place\":\"Bistro Bohem\",\"login\":\"2027355895\",\"lat\":\"38.91538\",\"lon\":\"-77.02013\"},\"geometry\":{\"type\":\"Point\",\"coordinates\":[-77.02013,38.91538]}},{\"type\":\"Feature\",\"properties\":{\"place\":\"Black Cat\",\"login\":\"luckycat\",\"lat\":\"38.91458\",\"lon\":\"-77.03155\"},\"geometry\":{\"type\":\"Point\",\"coordinates\":[-77.03155,38.91458]}},{\"type\":\"Feature\",\"properties\":{\"place\":\"Snap\",\"login\":\"nutella1\",\"lat\":\"38.92239\",\"lon\":\"-77.04227\"},\"geometry\":{\"type\":\"Point\",\"coordinates\":[-77.04227,38.92239]}},{\"type\":\"Feature\",\"properties\":{\"place\":\"Columbia Heights Coffee\",\"login\":\"FAIRTRADE1\",\"lat\":\"38.93222\",\"lon\":\"-77.02854\"},\"geometry\":{\"type\":\"Point\",\"coordinates\":[-77.02854,38.93222]}},{\"type\":\"Feature\",\"properties\":{\"place\":\"Azi's Cafe\",\"login\":\"sunny\",\"lat\":\"38.90842\",\"lon\":\"-77.02419\"},\"geometry\":{\"type\":\"Point\",\"coordinates\":[-77.02419,38.90842]}},{\"type\":\"Feature\",\"properties\":{\"place\":\"Blind Dog Cafe\",\"login\":\"baxtercantsee\",\"lat\":\"38.91931\",\"lon\":\"-77.02518\"},\"geometry\":{\"type\":\"Point\",\"coordinates\":[-77.02518,38.91931]}},{\"type\":\"Feature\",\"properties\":{\"place\":\"Le Caprice\",\"login\":\"baguette\",\"lat\":\"38.93260\",\"lon\":\"-77.03304\"},\"geometry\":{\"type\":\"Point\",\"coordinates\":[-77.03304,38.9326]}},{\"type\":\"Feature\",\"properties\":{\"place\":\"Filter\",\"login\":\"\",\"lat\":\"38.91368\",\"lon\":\"-77.04509\"},\"geometry\":{\"type\":\"Point\",\"coordinates\":[-77.04509,38.91368]}},{\"type\":\"Feature\",\"properties\":{\"place\":\"Peregrine\",\"login\":\"espresso\",\"lat\":\"38.88516\",\"lon\":\"-76.99656\"},\"geometry\":{\"type\":\"Point\",\"coordinates\":[-76.99656,38.88516]}},{\"type\":\"Feature\",\"properties\":{\"place\":\"Tryst\",\"login\":\"coupetnt\",\"lat\":\"38.921894\",\"lon\":\"-77.042438\"},\"geometry\":{\"type\":\"Point\",\"coordinates\":[-77.042438,38.921894]}},{\"type\":\"Feature\",\"properties\":{\"place\":\"The Coupe\",\"login\":\"voteforus\",\"lat\":\"38.93206\",\"lon\":\"-77.02821\"},\"geometry\":{\"type\":\"Point\",\"coordinates\":[-77.02821,38.93206]}},{\"type\":\"Feature\",\"properties\":{\"place\":\"Big Bear Cafe\",\"login\":\"\",\"lat\":\"38.91275\",\"lon\":\"-77.01239\"},\"geometry\":{\"type\":\"Point\",\"coordinates\":[-77.01239,38.91275]}}]}"
       ],
       "outputs": [],
-      "execution_count": 2,
+      "execution_count": 10,
       "metadata": {
         "collapsed": false
       }
@@ -424,7 +265,7 @@
           }
         }
       ],
-      "execution_count": 7,
+      "execution_count": 11,
       "metadata": {
         "collapsed": false
       }
